pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference21.pkl
import "pkl:ref"

typealias Ref<T> = ref.Reference<ref.Domain, T>

typealias Ref2<T> = Ref<T>

foo: Ref2<String(isEmpty)>
